# wreq-js

./: .gitignore  LICENSE  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  test-pr.yml  test.yml
docs/: custom-emulation.md
docs/api-reference/: sessions.mdx  websocket.mdx
docs/concepts/: sessions.mdx
docs/guides/: websockets.mdx
rust/: Cargo.toml
rust/bench-server/: Cargo.toml
rust/src/: client.rs  custom_emulation.rs  generated_profiles.rs  lib.rs  websocket.rs
scripts/: smoke-native.cjs
src/: generated-types.ts  types.ts  wreq-js.ts
src/test/: run-with-local-server.ts  websocket.spec.ts
src/test/helpers/: http.ts  local-test-server.ts
src/test/helpers/certs/: bundled-leaf.crt  bundled-root.crt  default-paths-leaf.crt  default-paths-leaf.key  default-paths-root.crt
src/test/http/: compress.spec.ts  coverage.spec.ts  emulation.spec.ts  proxy-headers.spec.ts  readable.spec.ts  requests.spec.ts  sessions.spec.ts  transport.spec.ts  trust-store.spec.ts
