[package]
name = "wreq-js"
version = "2.2.2"
edition = "2024"
license = "MIT"
authors = ["Oleksandr Herasymov", "will-work-for-meal"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# HTTP client with browser impersonation
wreq = { version = "6.0.0-rc.28", default-features = false, features = ["cookies", "gzip", "brotli", "deflate", "zstd", "charset", "system-proxy", "socks", "ws", "stream", "webpki-roots"] }
wreq-util = { version = "3.0.0-rc.10", features = ["emulation-serde", "emulation-rand"] }
webpki-root-certs = "1.0.4"

# WebSocket support
futures-util = "0.3.32"

# Byte buffers for streaming bodies
bytes = "1.11.1"

# Neon for Node.js bindings
neon = { version = "1.1.1", default-features = false, features = ["napi-6"] }

# Concurrent maps
dashmap = "6.1.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"

# Async runtime
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-util = "0.7.18"

# Global state management
moka = { version = "0.12.15", features = ["sync"] }
uuid = { version = "1.23.0", features = ["v4"] }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.27.2"
wreq-util = { version = "3.0.0-rc.10", features = ["emulation-serde", "emulation-rand"] }

[dev-dependencies]
boring2 = "5.0.0-alpha.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
