[package]
name = "wreq-bench-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio", "http1"] }
http-body-util = "0.1.3"
tokio = { version = "1.50.0", features = ["rt", "net", "macros"] }
bytes = "1.11.1"
http = "1.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
